# SmolChat-Android

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts
app/objectbox-models/: default.json  default.json.bak
app/src/androidTest/java/io/shubham0204/smollmandroid/: ChatActivityTests.kt  TaskActivityTests.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/shubham0204/smollmandroid/: KoinAppModule.kt  MainActivity.kt  SmolChatApplication.kt
app/src/main/java/io/shubham0204/smollmandroid/data/: ChatsDB.kt  DataModels.kt  HFModelsAPI.kt  MessagesDB.kt  ModelsDB.kt  ObjectBoxStore.kt  TasksDB.kt
app/src/main/java/io/shubham0204/smollmandroid/llm/: ExampleModelsList.kt  ModelsRepository.kt  SmolLMManager.kt
app/src/main/java/io/shubham0204/smollmandroid/prism4j/: PrismGrammarLocator.kt  Prism_brainfuck.java  Prism_c.java  Prism_clike.java  Prism_clojure.java  Prism_cpp.java  Prism_csharp.java  Prism_css.java  Prism_css_extras.java  Prism_dart.java  Prism_git.java  Prism_go.java  Prism_groovy.java  Prism_java.java  Prism_javascript.java  Prism_json.java  Prism_kotlin.java  Prism_latex.java  Prism_makefile.java  Prism_markdown.java  Prism_markup.java  Prism_python.java  Prism_scala.java  Prism_sql.java  Prism_swift.java  Prism_yaml.java
app/src/main/java/io/shubham0204/smollmandroid/ui/components/: AppAlertDialog.kt  AppProgressDialog.kt  Text.kt
app/src/main/java/io/shubham0204/smollmandroid/ui/screens/chat/: ChatActivity.kt  ChatListDrawer.kt  ChatMessageText.kt  ChatMoreOptionsPopup.kt  ChatScreenViewModel.kt  EditChatSettingsScreen.kt  SelectModelsList.kt
app/src/main/java/io/shubham0204/smollmandroid/ui/screens/manage_tasks/: CreateTaskDialog.kt  EditTaskDialog.kt  ManageTasksActivity.kt  TaskOptionsPopup.kt  TasksViewModel.kt
app/src/main/java/io/shubham0204/smollmandroid/ui/screens/model_download/: DownloadModelActivity.kt  DownloadModelsViewModel.kt  HFModelSearchScreen.kt  ViewHFModelScreen.kt
app/src/main/java/io/shubham0204/smollmandroid/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/font/: inter_font_family.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: locales_config.xml
app/src/test/java/io/shubham0204/smollmandroid/: ExampleUnitTest.kt
docs/: build_arm_flags.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hf-model-hub-api/: build.gradle.kts
hf-model-hub-api/src/main/java/io/shubham0204/hf_model_hub_api/: CustomDateSerializer.kt  HFEndpoints.kt  HFModelInfo.kt  HFModelSearch.kt  HFModelTree.kt  HFModels.kt
hf-model-hub-api/src/test/java/: HFModelTests.kt
smollm/: build.gradle.kts
smollm/src/androidTest/java/io/shubham0204/smollm/: SmolLMInstrumentedTest.kt  SmolLMTest.kt
smollm/src/main/: AndroidManifest.xml
smollm/src/main/cpp/: CMakeLists.txt  GGUFReader.cpp  LLMInference.cpp  LLMInference.h  llm_inference.cpp  llm_inference.h  smollm.cpp
smollm/src/main/java/io/shubham0204/smollm/: GGUFReader.kt  SmolLM.kt
